--- a/app/templates/app-recipes/category.tpl.html
+++ b/app/templates/app-recipes/category.tpl.html
@@ -1,19 +1,34 @@
-<div class="dashboard">
-
-  <div class="row align-center">
-    <div class="recipe small-10 medium-4 large-3 columns" style="background-image: url( {{ recipe.source_image_url }} )" ng-repeat="recipe in vm.catRecipes">
-      <p class="title">
-        <a href="#/recipes/{{ recipe.id }}">{{ recipe.name }}</a>
-      </p>
-    </div>
-  </div>
-
+<div class="dashboard" id="page">
+  <p>Dashboard</p>
 </div>
 
-<footer class"categories">
-  <ul>
-    <li ng-repeat="category in vm.categories"> 
-    <a href="#/category/{{ category.id }}">{{ category.name }}</a>
+<ul id="category-recipes"  ng-controller="CategoryController as recipes">
+
+    <li ng-repeat="recipe in vm.catRecipes" ng-if="recipe.source_image_url" >
+      <div class="wrapper">
+        <a href="#/recipes/{{ recipe.id }}">
+          <div class="title">
+            <span>{{ recipe.name }}</span>
+          </div>
+          <div class="picture" ng-style="{'background-image':'url( {{ recipe.source_image_url }} )'}" >
+            <div class="backshade"></div>
+           
+          </div>
+          
+        </a>
+      </div>
+    </li>
+
+  </ul>
+
+
+
+<div class"bottom">
+  <ul class="categories">
+    <li class="category" ng-repeat="category in vm.categories"> 
+      <a id="category" href="#/category/{{ category.id }}">  
+        {{ category.name }}
+      </a>
     </li>
   </ul>
-</footer>
+</div>
