--- a/app/templates/app-user/dashboard.tpl.html
+++ b/app/templates/app-user/dashboard.tpl.html
@@ -2,7 +2,6 @@
   <p>Dashboard</p>
 </div>
 
-<!-- <div class="dashboard"> --> 
 
   <ul id="dash"  ng-controller="DashboardController as recipes">
 
@@ -23,25 +22,12 @@
 
   </ul>
 
-<!-- </div> -->
-
-<!-- <div class="dashboard">
-  <div class="row align-center" ng-controller="DashboardController as recipes">
-
-    <div class="recipe small-10 medium-4 large-3 columns"  ng-repeat="recipe in vm.recipes" >
-      <img src="{{ recipe.source_image_url }}">
-      <p class="title">
-        <a href="#/recipes/{{ recipe.id }}">{{ recipe.name }}</a>
-      </p>
-    </div>
-  </div>
-
-</div> -->
 
 <div class"bottom">
   <ul class="categories">
     <li class="category" ng-repeat="category in vm.categories"> 
-      <a id="category" href="#/category/{{ category.id }}">  {{ category.name }}
+      <a id="category" href="#/category/{{ category.id }}">  
+        {{ category.name }}
       </a>
     </li>
   </ul>
