--- a/app/templates/app-layout/layout.tpl.html
+++ b/app/templates/app-layout/layout.tpl.html
@@ -19,9 +19,9 @@
 </nav>
 
 <div ui-view>
-  <div class="dashboard" id="page">
+  <!-- <div class="dashboard" id="page">
     <p>{{ vm.message }}</p>
-  </div>
+  </div> -->
 
   <section class="container" ></section>
 
