--- a/app/templates/app-recipes/search.tpl.html
+++ b/app/templates/app-recipes/search.tpl.html
@@ -12,7 +12,7 @@
             <span>{{ results.name }}</span>
           </div>
           <div class="picture" ng-style="{'background-image':'url( {{ results.source_image_url }} )'}" >
-            <div class="backshade"></div>
+            <div id="backshade"></div>
            
           </div>
           
@@ -23,7 +23,7 @@
   </ul>
 
 
-<div class"bottom">
+<div class="bottom">
   <ul class="categories">
     <li class="category"> 
       <a id="category" href="#/category/1">  
