--- a/app/templates/app-user/dashboard.tpl.html
+++ b/app/templates/app-user/dashboard.tpl.html
@@ -12,10 +12,8 @@
             <span>{{ recipe.name }}</span>
           </div>
           <div class="picture" ng-style="{'background-image':'url( {{ recipe.source_image_url }} )'}" >
-            <div class="backshade"></div>
-           
+            <div id="backshade"></div>
           </div>
-          
         </a>
       </div>
     </li>
