--- a/app/templates/app-recipes/category.tpl.html
+++ b/app/templates/app-recipes/category.tpl.html
@@ -11,7 +11,7 @@
             <span>{{ recipe.name }}</span>
           </div>
           <div class="picture" ng-style="{'background-image':'url( {{ recipe.source_image_url }} )'}" >
-            <div class="backshade"></div>
+            <div id="backshade"></div>
            
           </div>
           
