--- a/app/templates/app-recipes/recipe-single.tpl.html
+++ b/app/templates/app-recipes/recipe-single.tpl.html
@@ -1,22 +1,26 @@
-<div class="singleRecipe">
+<ul id="singleRecipe">
 
+  <li class="food">
+      <div>
+        <div class="name">
+          <span>{{ vm.recipe.name }}</span>
+        </div>
+        <div class="mainPhoto" style="background-image: url( {{ vm.recipe.source_image_url }} ) ">
+          <div id="shade"></div>
+        </div>
+      </div>
+  </li>
 
+</ul>
 
-  <div id="mainPhoto" style="background-image: url( {{ vm.recipe.source_image_url }} ) ">
-    
-  </div>
-
-
-  <div id="card">
-    <div class="row">
-     <span id="recipe-title">{{ vm.recipe.name}}</span>
-    </div>
    
 
-    <div id="recipe" class="row">
-
+    <div id="recipe">
+      <!-- <div class="name">
+        <span>{{ vm.recipe.name }}</span>
+      </div> -->
       <!-- Populating Ingredients from IngredientsController -->
-       <div class="ingredients shrink columns" ng-controller="IngredientsController as ingredients">
+       <div class="ingredients " ng-controller="IngredientsController as ingredients">
         <div class="heading">
           <h4>Ingredients</h4>
         </div>
@@ -28,7 +32,7 @@
        </div>
 
       <!-- Populating Directions from DirectionsController -->
-       <div class="directions columns" ng-controller="DirectionsController as directions">
+       <div class="directions " ng-controller="DirectionsController as directions">
         <div class="heading">
           <h4>Directions</h4>
         </div>
@@ -40,15 +44,17 @@
      </div>
   </div>
 
-</div>
-
-<div class"categories">
-  <div class="row align-spaced ">
-    <div class="column small-2" ng-repeat="category in vm.categories"> 
-      <a id="category" href="#/category/{{ category.id }}">{{ category.name }}</a>
-    </div>
-  </div>
-</div>
 
 
+<div class="bottom">
+  <ul class="categories">
+    <li class="category" ng-repeat="category in vm.categories"> 
+      <a id="category" href="#/category/{{ category.id }}">  
+        {{ category.name }}
+      </a>
+    </li>
+  </ul>
 </div>
+
+
+
